Refactored to split GBM and eProcurement
